Fix various styling and layout issues
  - fix button spacing on all pages
  - alter the layout of the quantity form for checkout and cart
    templates
  - adjust the whole layout of the products section of the checkout
    template

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -187,9 +187,18 @@ footer .row {
 
 /* ------------------------------------------Cart styles */
 .quantity-form {
+  width: 100%;
+}
+
+.checkout-img {
+  max-width: 220px;
+}
+
+.checkout-display {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
+  align-items: flex-end;
+  text-align: right;
 }
 
 /* ------------------------------------------mtm styles */
@@ -237,6 +246,10 @@ smaller screens */
 
   .mtm-display {
     text-align: center !important;
+  }
+
+  .quantity-form {
+    width: auto;
   }
 }
 
